feat: add client-side Vite configuration and update admin credentials in environment variables

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGO_URI=mongodb+srv://haris687chohan_db_user:8ph3a6suZMWJoVEe@cluster0.pt1wwuz.mongodb.net/?appName=Cluster0
 PORT=5000
-VITE_ADMIN_EMAIL=admin@gmail.com
-VITE_ADMIN_PASSWORD=admin123
+VITE_ADMIN_EMAIL=haris687.chohan@gmail.com
+VITE_ADMIN_PASSWORD=bfzw5889
